# fmd-service

./: .gitignore  Makefile  README.md  pyproject.toml
db/: initdb.sql
src/fmd/config/: universe.yml
src/fmd/loaders/: historical.py  misc.py
src/fmd/utils/: async_marketdata_handler.py  data_process_utils.py  http_response_handler.py  log.py  paths.py  universe.py
src/fmd/vendors/: eodhd.py  polygon.py  vendor.py
tests/: conftest.py  pytest.ini
tests/unit/: test_eodhd.py  test_fetch_utils.py  test_loader.py
